--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <title>ToYourDoor</title>
 </head>
 <body>
+    <!-- Main head -->
 <section class="main">
     <div class="chef">
         <img src="./chef.png" alt="juice" class="chef">
