--- a/page2.html
+++ b/page2.html
@@ -16,7 +16,7 @@
 
 
 
-    <div class="container container-fluid stnav">
+    <div class="container1 stnav">
         <nav class="navbar navbar-expand-lg">
             <a class="navbar-brand" href="#">
                 <img src="./favicon-32x32.png" alt="image" class="img">
