--- a/page2.html
+++ b/page2.html
@@ -74,11 +74,11 @@
             </div>
             <div class="row">
                 <div class="col-md-3 card">
-                    <img src="./tft.jpeg" alt="logo" class="logo">
+                    <img src="./tb.png" alt="logo" class="logo">
                     <button  class="btn"> Menu</button>
                 </div>
                 <div class="col-md-3 card">
-                    <img src="./greenerside.jpeg" alt="" class="logo"> 
+                    <img src="./brij.png" alt="" class="logo"> 
                     <button class="btn"> Menu</button>
                 </div>
                 <div class="col-md-3 card">
