--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <section class="main">
-        <img src="./delivery.png" alt="logo" class="img">
         <h1 class="logo">ToYourDoor</h1>
-       <div class="text">
-            <h1>
-                You <span class="spann">Want</span> It <br> We <span class="spann"> Deliver </span> It
-            </h1>
-            <hr style="width:30%; margin-left:10px">
-            <p class="para">
-            <Button onclick="window.location.href='page2.html';" >Log In</Button>
-            <button onclick="window.location.href='Signup.html';"> Sign Up</button>
-       </div>
+     <img src="./back.png" alt="image" class="side-image">
+     <div class="text">
+        <h1>
+            You <span class="spann">Want</span> It <br> We <span class="spann"> Deliver </span> It
+        </h1>
+        <hr style="width:30%; margin-left:10px">
+        <p class="para">
+        <Button onclick="window.location.href='page2.html';" >Log In</Button>
+        <button onclick="window.location.href='Signup.html';"> Sign Up</button>
+   </div>
     </section>
 </body>
 </html>
