--- a/index.html
+++ b/index.html
@@ -10,16 +10,18 @@
 </head>
 <body>
     <section class="main">
+        <img src="./favicon-32x32.png" alt="icon" class="delivery">
         <h1 class="logo">ToYourDoor</h1>
      <img src="./back.png" alt="image" class="side-image">
      <div class="text">
         <h1>
             You <span class="spann">Want</span> It <br> We <span class="spann"> Deliver </span> It
         </h1>
-        <hr style="width:30%; margin-left:10px">
+        <hr style="width:30%; margin-left:10px;display: inline;">
+        <br>
         <p class="para">
         <Button onclick="window.location.href='page2.html';" >Log In</Button>
-        <button onclick="window.location.href='Signup.html';"> Sign Up</button>
+        <button class="sup" onclick="window.location.href='Signup.html';"> Sign Up</button>
    </div>
     </section>
 </body>
