--- a/page2.html
+++ b/page2.html
@@ -75,6 +75,19 @@
         </div>
     </div>
     </div>
+
+  <section id="footer">
+      <i class="fa-brands fa-twitter lasticons"></i>
+      <i class="fa-brands fa-facebook lasticons"></i>
+      <i class="fa-brands fa-instagram lasticons"></i>
+      <i class="fa-solid fa-envelope lasticons"></i>
+      <p id="footer_para">© Copyright  2022  ToYourDoor</p>
+      <p id="footer_para">Shahid khan | Arpit Tyagi | Anurag sharma | Muhd. Aasim Waseem</p>
+    </section>
+
+
+
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
