--- a/page2.html
+++ b/page2.html
@@ -24,15 +24,11 @@
             <button class="navbar-toggler toggle toggl" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav ms-auto gr">
-                <li class="gr">
-                  <a class="nav-link active gr" aria-current="page" href="#">About</a>
-                </li>
-                <li class="nav-item gr">
-                  <a class="nav-link gr" href="#">Today's Special</a>
-                </li>
-              </ul>
+            <div class="ms-auto">
+            <div class="collapse navbar-collapse gr" id="navbarSupportedContent">
+                  <a class="nav-link active" aria-current="page" href="#">About</a>
+                  <a class="nav-link" href="#">Today's Special</a>
+                </div>
             </div>
             
         </nav>
