--- a/page2.html
+++ b/page2.html
@@ -61,7 +61,7 @@
                     <button  class="btn"> Menu</button>
                 </div>
                 <div class="col-md-3 card">
-                    <img src="./brij.png" alt="" class="logo"> 
+                    <img src="./brijwasi.png" alt="" class="logo"> 
                     <button class="btn"> Menu</button>
                 </div>
                 <div class="col-md-3 card">
