--- a/page2.html
+++ b/page2.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <link href='https://fonts.googleapis.com/css?family=Amarante' rel='stylesheet'>
 
     <link rel="stylesheet" href="./page2.css">
     <title>ToYourDoor</title>
     <link rel="shortcut icon" href="/favicon-32x32.png" type="image/x-icon">
+    
 </head>
 <body>
     <!-- NAVBAR -->
