--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <div class="buttons">
             <Button onclick="window.location.href='page2.html';" >Log In</Button>
-        <button class="sup" onclick="window.location.href='Signup.html';"> Sign Up</button>
+        <button class="sup" onclick="window.location.href='signup.html';"> Sign Up</button>
         </div>
    </div>
     </section>
