--- a/signin.html
+++ b/signin.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="button">
-          <input type="submit" value="Log In">
+          <input type="submit" value="Log In" onclick="window.location.href='page2.html';">
         </div>
       </form>
     </div>
