--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h3 class="para">Order Your Product at any time we deliver it to your hostel </h3>
         
         <div class="buttons">
-            <Button onclick="window.location.href='page2.html';" >Log In</Button>
+            <Button onclick="window.location.href='signin.html';" >Log In</Button>
         <button class="sup" onclick="window.location.href='signup.html';"> Sign Up</button>
         </div>
    </div>
