--- a/signup.html
+++ b/signup.html
@@ -15,20 +15,24 @@
       <form action="#">
         <div class="user-details">
           <div class="input-box">
-            <span class="details">Full Name</span>
+            <span class="details">First Name</span>
             <input type="text" placeholder="Enter your name" required>
           </div>
           <div class="input-box">
-            <span class="details">Username</span>
+            <span class="details">Last Name</span>
             <input type="text" placeholder="Enter your username" required>
+          </div>
+          <div class="input-box">
+            <span class="details">Username</span>
+            <input type="text" placeholder="Enter your number" required>
           </div>
           <div class="input-box">
             <span class="details">Email</span>
             <input type="text" placeholder="Enter your email" required>
           </div>
           <div class="input-box">
-            <span class="details">Phone Number</span>
-            <input type="text" placeholder="Enter your number" required>
+            <span class="details">University Roll No.</span>
+            <input type="number" placeholder="Enter your number" required>
           </div>
           <div class="input-box">
             <span class="details">Password</span>
@@ -37,26 +41,6 @@
           <div class="input-box">
             <span class="details">Confirm Password</span>
             <input type="text" placeholder="Confirm your password" required>
-          </div>
-        </div>
-        <div class="gender-details">
-          <input type="radio" name="gender" id="dot-1">
-          <input type="radio" name="gender" id="dot-2">
-          <input type="radio" name="gender" id="dot-3">
-          <span class="gender-title">Gender</span>
-          <div class="category">
-            <label for="dot-1">
-            <span class="dot one"></span>
-            <span class="gender">Male</span>
-          </label>
-          <label for="dot-2">
-            <span class="dot two"></span>
-            <span class="gender">Female</span>
-          </label>
-          <label for="dot-3">
-            <span class="dot three"></span>
-            <span class="gender">Prefer not to say</span>
-            </label>
           </div>
         </div>
         <div class="button">
