--- a/signin.html
+++ b/signin.html
@@ -16,12 +16,16 @@
         <div class="user-details">
     
           <div class="input-box">
-            <span class="details">Roll Number</span>
-            <input type="number" placeholder="Roll Number" required>
-          </div>
+                <span class="details">Email</span>
+                <input type="email" placeholder="Roll Number" required>
+              </div>
           <div class="input-box">
             <span class="details">Password</span>
-            <input type="text" placeholder="Enter your password" required>
+            <input type="password" placeholder="Enter your password" required>
+          </div>
+          <div class="input-box">
+            <span class="details">Roll Number</span>
+            <input type="number" placeholder="Roll Number" required>
           </div>
 
         </div>
